--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.16.0"
+          node-version: "20.x"
           cache: "npm" # Habilita caché para acelerar instalaciones
 
       - name: Install dependencies
@@ -70,5 +70,4 @@ jobs:
             DB_CONNECTION_TIMEOUT=30000
             DB_IDLE_TIMEOUT=10000
             SSL_MODE=require # Para conexión segura a RDS
-          layers: ${{ secrets.LAMBDA_LAYER_ARN }} # Opcional: usa una capa para dependencias comunes
           architecture: x86_64 # o arm64 para optimizar costos
