--- a/package.json
+++ b/package.json
@@ -18,24 +18,23 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "6.5.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "pg": "^8.14.1",
-    "prisma": "^6.5.0",
-    "typescript": "^5.8.2"
+    "magapp": "link:",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
-    "tsx": "^4.19.3"
+    "prisma": "^6.5.0",
+    "rimraf": "^6.0.1",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
