--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,14 +17,11 @@ jobs:
         with:
           node-version: "20.x"
 
-      - name: Install pnpm
-        run: npm install -g pnpm
-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Generate Prisma Client
-        run: pnpm prisma generate
+        run: npx prisma generate
 
       - name: Build TypeScript
         run: npm run build
@@ -51,7 +48,7 @@ jobs:
 
           cd lambda-package
           # install only production dependencies
-          pnpm install --production
+          npm install --production
           npx prisma generate
           # delete unnecessary files
           rm -rf node_modules/typescript node_modules/@types
