--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
